--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 Jinja2==2.6
 Markdown==2.1.1
 Pygments==1.5
+Unidecode==0.04.10
+argparse==1.2.1
+blinker==1.2
 docutils==0.8.1
 feedgenerator==1.2.1
-pelican==3.0
-pytz==2012b
+pelican==3.1.1
+pytz==2012c
+wsgiref==0.1.2
